small fixes: remove not needed scrollbar; is_staff is now a JS variable

--- a/static/css/main_layout.css
+++ b/static/css/main_layout.css
@@ -58,12 +58,6 @@ strong{
 
 #main_container{
     background-color: snow;
-    overflow-y: scroll;
-    overflow-x: hidden;
-}
-
-#browser_table_container{
-    overflow: hidden;
 }
 
 .table_div{
